src/test/ui/issues/issue-52533.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-52533.rs:5:16
   |
LL |     foo(|a, b| b)
   |                ^
   |
note: ...the reference is valid for the anonymous lifetime #2 defined on the body at 5:9...
  --> $DIR/issue-52533.rs:5:9
   |
LL |     foo(|a, b| b)
   |         ^^^^^^^^
note: ...but the borrowed content is only valid for the anonymous lifetime #3 defined on the body at 5:9
  --> $DIR/issue-52533.rs:5:9
   |
LL |     foo(|a, b| b)
   |         ^^^^^^^^

error: aborting due to previous error

